fix shifting html and next question page not resetting

--- a/src/app/pages/math-review/math.page.scss
+++ b/src/app/pages/math-review/math.page.scss
@@ -12,6 +12,12 @@ $q-font-size: 4rem;
         font-size: 1rem;
     }
 
+    &__outer {
+        display: grid;
+        gap: 1rem;
+        width: 325px;
+    }
+
     &__question {
         margin: 3rem 0 0 0;
         text-align: center;
